--- a/roles/scalelite/templates/nginx/scalelite/greenlight.nginx.j2
+++ b/roles/scalelite/templates/nginx/scalelite/greenlight.nginx.j2
@@ -93,3 +93,13 @@ location /.well-known/security.txt {
     add_header Content-Type "text/plain;charset=utf-8";
     return 200 '{{ scalelite_security_txt | replace('\n', '\\n') }}';
 }
+
+location /robots.txt {
+    add_header Content-Security-Policy "default-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; connect-src 'self'; img-src 'self'; style-src 'self' 'unsafe-inline'; frame-ancestors 'self'; form-action 'self'";
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload";
+    add_header X-Content-Type-Options "nosniff";
+    add_header Cache-Control "max-age=36000, immutable";
+    add_header X-Frame-Options SAMEORIGIN;
+    add_header Content-Type "text/plain;charset=utf-8";
+    return 200 '{{ scalelite_robots_txt| replace('\n', '\\n') }}';
+}
