--- a/roles/scalelite/templates/nginx/scalelite/greenlight.nginx.j2
+++ b/roles/scalelite/templates/nginx/scalelite/greenlight.nginx.j2
@@ -24,7 +24,7 @@ location /greenlight {
     proxy_set_header Connection "";
     
     # Set Headers
-    add_header Content-Security-Policy "default-src 'self'; script-src 'self'; connect-src 'self'; img-src 'self'; style-src 'self'; frame-ancestors 'self'; form-action 'self'; worker-src 'self'";
+    add_header Content-Security-Policy "default-src 'self'; script-src 'self'; connect-src 'self'; img-src 'self' blob: data:; style-src 'self'; frame-ancestors 'self'; form-action 'self'; worker-src 'self'";
     add_header Strict-Transport-Security "max-age=31556952; includeSubDomains";
     add_header X-Content-Type-Options "nosniff";
     add_header Cache-Control "max-age=0, private, must-revalidate";
@@ -92,4 +92,14 @@ location /.well-known/security.txt {
     add_header X-Frame-Options SAMEORIGIN;
     add_header Content-Type "text/plain;charset=utf-8";
     return 200 '{{ scalelite_security_txt | replace('\n', '\\n') }}';
+}
+
+location /robots.txt {
+    add_header Content-Security-Policy "default-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; connect-src 'self'; img-src 'self'; style-src 'self' 'unsafe-inline'; frame-ancestors 'self'; form-action 'self'";
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload";
+    add_header X-Content-Type-Options "nosniff";
+    add_header Cache-Control "max-age=36000, immutable";
+    add_header X-Frame-Options SAMEORIGIN;
+    add_header Content-Type "text/plain;charset=utf-8";
+    return 200 '{{ scalelite_robots_txt| replace('\n', '\\n') }}';
 }
