--- a/roles/gitlab_agent/templates/values.yml.j2
+++ b/roles/gitlab_agent/templates/values.yml.j2
@@ -18,6 +18,11 @@ podAnnotations: []
 serviceMonitor:
   enabled: true
 
+serviceAccount:
+  create: {{ item.service_account_create | default(true) }}
+  annotations: {{ item.service_account_annotations | default({}) }}
+  name: {{ item.service_account_name | default('') }}
+
 rbac:
   create: {{ item.rbac_create }}
   useExistingRole: {{ item.rbac_role | default('') }}
