--- a/roles/scalelite/templates/docker-compose.yml.j2
+++ b/roles/scalelite/templates/docker-compose.yml.j2
@@ -364,11 +364,9 @@ services:
 {% if scalelite_clamav_enabled %}
       - {{ scalelite_docker_volumes_folder }}/greenlight/clamd.conf:/etc/clamav/clamd.conf:r
 {% endif %}
-{% if instance.content_overlay is defined %}
-      - {{ scalelite_docker_volumes_folder }}/content_overlay_{{ instance.content_overlay }}_json/de.json:/usr/src/app/app/assets/locales/de.json:r
-      - {{ scalelite_docker_volumes_folder }}/content_overlay_application_css/application.bootstrap.scss:/usr/src/app/app/assets/stylesheets/application.bootstrap.scss:r
-      - {{ scalelite_docker_volumes_folder }}/content_overlay_custon_css/custom.scss:/usr/src/app/app/assets/stylesheets/custom.scss:r
-{% endif %}
+  {% for instance_custom_locale in instance.bbb_greenlight_custom_locale %}
+      - {{ scalelite_docker_volumes_folder }}/{{ instance.name }}/{{ instance_custom_locale.overlay_name }}:{{ instance_custom_locale.mountpath}}
+  {% endfor %}
     healthcheck:
       test: ["CMD", "bash", "-c", "echo -n '' > /dev/tcp/127.0.0.1/3000"]
       interval: 30s
