--- a/roles/scalelite/templates/docker-compose.yml.j2
+++ b/roles/scalelite/templates/docker-compose.yml.j2
@@ -364,9 +364,9 @@ services:
 {% if scalelite_clamav_enabled %}
       - {{ scalelite_docker_volumes_folder }}/greenlight/clamd.conf:/etc/clamav/clamd.conf:r
 {% endif %}
-  {% for instance_custom_locale in instance.bbb_greenlight_custom_locale %}
-      - {{ scalelite_docker_volumes_folder }}/{{ instance.name }}/{{ instance_custom_locale.overlay_name }}:{{ instance_custom_locale.mountpath}}
-  {% endfor %}
+{% for extra_instance in scalelite_greenlight_extra_instances.bbb_greenlight_custom_locale %}
+      - {{ scalelite_docker_volumes_folder }}/{{ extra_instance.name }}/{{ extra_instance[instance_custom_locale].overlay_name }}:{{ extra_instance[instance_custom_locale].mountpath}}
+{% endfor %}
     healthcheck:
       test: ["CMD", "bash", "-c", "echo -n '' > /dev/tcp/127.0.0.1/3000"]
       interval: 30s
