--- a/roles/scalelite/templates/env.j2
+++ b/roles/scalelite/templates/env.j2
@@ -8,7 +8,7 @@ POSTGRES_SCALELITE_PASSWORD={{ scalelite_postgres_scalelite_password }}
 POSTGRES_GREENLIGHT_V3_PASSWORD={{ scalelite_postgres_greenlight_password }}
 POSTGRES_EXPORTER_PASSWORD={{ scalelite_postgres_exporter_password }}
 {% for instance in scalelite_greenlight_extra_instances %}
-POSTGRES_GREENLIGHT_{{ instance.name|upper }}_V3_PASSWORD={{ instance.postgres_password }}
+POSTGRES_GREENLIGHT_{{ instance.name | replace('-', '_') }}_V3_PASSWORD={{ instance.postgres_password }}
 {% endfor %}
 
 ### Certbot
@@ -36,6 +36,6 @@ REDIS_SECRET={{ scalelite_redis_password }}
 GREENLIGHT_REDIS_USER={{ scalelite_greenlight_redis_user }}
 GREENLIGHT_REDIS_SECRET={{ scalelite_greenlight_redis_password }}
 {% for instance in scalelite_greenlight_extra_instances %}
-GREENLIGHT_REDIS_{{ instance.name|upper }}_USER=Redis_{{ instance.name }}
-GREENLIGHT_REDIS_{{ instance.name|upper }}_SECRET={{ instance.redis_secret }}
+GREENLIGHT_REDIS_{{ instance.name | replace('-', '_') }}_USER=Redis_{{ instance.name }}
+GREENLIGHT_REDIS_{{ instance.name | replace('-', '_') }}_SECRET={{ instance.redis_secret }}
 {% endfor %}
