--- a/roles/scalelite/templates/docker-compose.yml.j2
+++ b/roles/scalelite/templates/docker-compose.yml.j2
@@ -26,7 +26,7 @@ services:
       POSTGRES_GREENLIGHT_V3_PASSWORD: ${POSTGRES_GREENLIGHT_V3_PASSWORD}
       POSTGRES_EXPORTER_PASSWORD: ${POSTGRES_EXPORTER_PASSWORD}
 {% for instance in scalelite_greenlight_extra_instances %}
-      POSTGRES_GREENLIGHT_{{ instance.name|upper }}_V3_PASSWORD: ${POSTGRES_GREENLIGHT_{{ instance.name|upper }}_V3_PASSWORD}
+      POSTGRES_GREENLIGHT_{{ instance.name | upper | replace('-', '_') }}_V3_PASSWORD: ${POSTGRES_GREENLIGHT_{{ instance.name | upper | replace('-', '_') }}_V3_PASSWORD}
 {% endfor %}
       PGDATA: /var/lib/postgresql/data
       POSTGRES_HOST: db
@@ -323,7 +323,7 @@ services:
       - {{ scalelite_docker_volumes_folder }}/redis_{{ instance.name }}_data/redis.conf:/usr/local/etc/redis.conf
     command: ["/usr/local/etc/redis.conf"]
     healthcheck:
-      test:  ["CMD-SHELL", "redis-cli --user '${GREENLIGHT_REDIS_{{ instance.name| upper }}_USER}' --pass '${GREENLIGHT_REDIS_{{ instance.name| upper }}_SECRET}' ping | grep 'PONG' || exit 1"]
+      test:  ["CMD-SHELL", "redis-cli --user '${GREENLIGHT_REDIS_{{ instance.name | upper | replace('-', '_') }}_USER}' --pass '${GREENLIGHT_REDIS_{{ instance.name | upper | replace('-', '_') }}_SECRET}' ping | grep 'PONG' || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 5
@@ -343,7 +343,7 @@ services:
       - DEFAULT_LOCALE={{ scalelite_greenlight_default_locale }}
       - LOG_LEVEL={{ scalelite_greenlight_log_level }}
       - DATABASE_URL=postgres://greenlight-{{ instance.name }}-v3:${POSTGRES_GREENLIGHT_{{ instance.name|upper }}_V3_PASSWORD}@db:5432/greenlight-{{ instance.name }}-v3
-      - REDIS_URL=redis://${GREENLIGHT_REDIS_{{ instance.name | upper }}_USER}:${GREENLIGHT_REDIS_{{ instance.name | upper }}_SECRET}@redis-{{ instance.name}}:6379
+      - REDIS_URL=redis://${GREENLIGHT_REDIS_{{ instance.name | upper | replace('-', '_') }}_USER}:${GREENLIGHT_REDIS_{{ instance.name | upper | replace('-', '_') }}_SECRET}@redis-{{ instance.name}}:6379
       - CLAMAV_SCANNING={{ scalelite_clamav_enabled | string | lower }}
       - CLAMAV_DAEMONIZE=true
 {% if instance.phone_number is defined %}
