--- a/roles/scalelite/templates/docker-compose.yml.j2
+++ b/roles/scalelite/templates/docker-compose.yml.j2
@@ -364,12 +364,11 @@ services:
 {% if scalelite_clamav_enabled %}
       - {{ scalelite_docker_volumes_folder }}/greenlight/clamd.conf:/etc/clamav/clamd.conf:r
 {% endif %}
-
-#       - {{ scalelite_docker_volumes_folder }}/content_overlay_dp2_welcome/welcome:/usr/src/app/app/assets/locales/de.json:r
-
-# {% for extra_instance in scalelite_greenlight_extra_instances.bbb_greenlight_custom_locale %}
-#       - {{ scalelite_docker_volumes_folder }}/{{ extra_instance.name }}/{{ extra_instance[instance_custom_locale].overlay_name }}:{{ extra_instance[instance_custom_locale].mountpath}}
-# {% endfor %}
+{% for extra_instance in scalelite_greenlight_extra_instances %}
+{% for instance_custom_locale in extra_instance.bbb_greenlight_custom_locale %}
+      - {{ scalelite_docker_volumes_folder }}/content_overlay_{{ extra_instance.name }}_{{ instance_custom_locale.overlay_name }}/{{ instance_custom_locale.overlay_name }}:{{ instance_custom_locale.mountpath }}
+{% endfor %}
+{% endfor %}
     healthcheck:
       test: ["CMD", "bash", "-c", "echo -n '' > /dev/tcp/127.0.0.1/3000"]
       interval: 30s
