--- a/roles/scalelite/templates/docker-compose.yml.j2
+++ b/roles/scalelite/templates/docker-compose.yml.j2
@@ -364,12 +364,12 @@ services:
 {% if scalelite_clamav_enabled %}
       - {{ scalelite_docker_volumes_folder }}/greenlight/clamd.conf:/etc/clamav/clamd.conf:r
 {% endif %}
-{% if instance.bbb_greenlight_custom_locale is defined %}
+{% if instance.custom_locale is defined %}
       - {{ scalelite_docker_volumes_folder }}/greenlight/{{ instance.name }}-locale/de.json:/usr/src/app/app/assets/locales/de.json:r
 {% endif %}
-{% if instance.bbb_greenlight_custom_file_mount is defined %}
-{% for instance_custom_file_mount in instance.bbb_greenlight_custom_file_mount %}
-      - {{ scalelite_docker_volumes_folder }}/greenlight/{{ instance.name }}-custom-{{ instance_custom_file_mount.custom_file_name }}/{{ instance_custom_file_mount.custom_file_name }}:{{ instance_custom_file_mount.mountpath }}
+{% if instance.custom_mounts is defined %}
+{% for instance_custom_file_mount in instance.custom_mounts %}
+      - {{ instance_custom_file_mount.hostpath }}:{{ instance_custom_file_mount.mountpath }}:r
 {% endfor %}
 {% endif %}
     healthcheck:
