Dbp 1571 bbb greenlight content fix in role (#21)
* DBP-1571-BBB-Greenlight-HH-logo-and-content-fix

* DBP-1571 fix config

* DBP-1571 fix template

* DBP-1571 debug

* DBP-1571 set loop var in template

* DBP-1571 clean up

* DBP-1571-BBB-Greenlight-content-fix-in-role

* DBP-1571-debug

* DBP-1571 add empty json file

* DBP-1571 add custom.scss

* DBP-1571 debug

* DBP-1571 fix compose file and nginx restart handler with compose

* DBP-1571 fix rules

* DBP-1571 debug

* DBP-1571 before cleanup

* DBP-1571 tidy

* DBP-1571 tidy

* DBP-1571 tidy

* DBP-1571 add extra-greenlight-certificates.yml

* DBP-1571 update PR

* DBP-1571 fix json patch

* DBP-1571 improve PR

* DBP-1571 fix PR remarks

* DBP-1571 fix check_mode

* OPS-1571 fix condition

* DBP-1571 add condion fix link

* DBP-1571 delete files in role

* DBP-1571 tidy link

* DBP-1571 fix compose file

---------

Co-authored-by: ralf.nelles.cap <ralf.nelles@capgemini.com>

--- a/roles/scalelite/templates/docker-compose.yml.j2
+++ b/roles/scalelite/templates/docker-compose.yml.j2
@@ -364,6 +364,14 @@ services:
 {% if scalelite_clamav_enabled %}
       - {{ scalelite_docker_volumes_folder }}/greenlight/clamd.conf:/etc/clamav/clamd.conf:r
 {% endif %}
+{% if instance.custom_locale is defined %}
+      - {{ scalelite_docker_volumes_folder }}/greenlight/{{ instance.name }}-locale/de.json:/usr/src/app/app/assets/locales/de.json:r
+{% endif %}
+{% if instance.custom_mounts is defined %}
+{% for instance_custom_file_mount in instance.custom_mounts %}
+      - {{ instance_custom_file_mount.hostpath }}:{{ instance_custom_file_mount.mountpath }}:r
+{% endfor %}
+{% endif %}
     healthcheck:
       test: ["CMD", "bash", "-c", "echo -n '' > /dev/tcp/127.0.0.1/3000"]
       interval: 30s
