--- a/roles/postgres_config/templates/config-script.sh.j2
+++ b/roles/postgres_config/templates/config-script.sh.j2
@@ -11,7 +11,7 @@ echo "REVOKE ALL ON DATABASE $DB_NAME FROM PUBLIC;" | psql -d postgres -w
 {% for user in psql_db_users %}
 echo "Create and set privileges for user {{ user.name }}"
 echo "SELECT 'CREATE USER {{ user.name }}' WHERE NOT EXISTS (SELECT FROM pg_user WHERE usename = '{{ user.name }}')\gexec" | psql -d postgres -w
-echo "ALTER USER {{ user.name }} WITH PASSWORD '$DB_{{ user.name | upper }}_USER_PASS'" | psql -d postgres -w
+echo "ALTER USER {{ user.name }} WITH ENCRYPTED PASSWORD '$DB_{{ user.name | upper }}_USER_PASS'" | psql -d postgres -w
 echo "GRANT {{ user.privileges | default(psql_default_privileges) }} ON DATABASE $DB_NAME to {{ user.name }}" | psql -d postgres -w
 {% endfor %}
 echo "Executing optional custom command in the new DB"
