DBP-1806 Use docker compose restart/exec

--- a/roles/scalelite/templates/scripts/delete-servers.sh.j2
+++ b/roles/scalelite/templates/scripts/delete-servers.sh.j2
@@ -4,8 +4,8 @@ END="$2"
 
 for (( i=$START; i<=$END; i++ ));
 do
- docker exec scalelite-api ./bin/rake servers | grep -e "bbb-$i\." -B 1 | grep id | cut -d " " -f2 > id
- docker exec scalelite-api ./bin/rake servers:panic[$(cat id)];
- docker exec scalelite-api ./bin/rake servers:remove[$(cat id)];
+ docker compose --project-directory {{ scalelite_docker_compose_folder }} exec scalelite-api ./bin/rake servers | grep -e "bbb-$i\." -B 1 | grep id | cut -d " " -f2 > id
+ docker compose --project-directory {{ scalelite_docker_compose_folder }} exec scalelite-api ./bin/rake servers:panic[$(cat id)];
+ docker compose --project-directory {{ scalelite_docker_compose_folder }} exec scalelite-api ./bin/rake servers:remove[$(cat id)];
 done
 
