--- a/roles/scalelite/templates/scripts/cordon-servers.sh.j2
+++ b/roles/scalelite/templates/scripts/cordon-servers.sh.j2
@@ -4,7 +4,7 @@ END="$2"
 
 for (( i=$START; i<=$END; i++ ))
 do
- docker exec scalelite-api ./bin/rake servers | grep -e "bbb-$i\." -B 1 | grep id | cut -d " " -f2 > id
- docker exec scalelite-api ./bin/rake servers:cordon[$(cat id)]
+ docker compose --project-directory {{ scalelite_docker_compose_folder }} exec scalelite-api ./bin/rake servers | grep -e "bbb-$i\." -B 1 | grep id | cut -d " " -f2 > id
+ docker compose --project-directory {{ scalelite_docker_compose_folder }} exec scalelite-api ./bin/rake servers:cordon[$(cat id)]
 done
 
