--- a/roles/grafana/templates/grafana-notification-policy.yml.j2
+++ b/roles/grafana/templates/grafana-notification-policy.yml.j2
@@ -2,29 +2,29 @@
 apiVersion: grafana.integreatly.org/v1beta1
 kind: GrafanaNotificationPolicy
 metadata:
-  name: {{ grafana_combined_notification_policy.name }}
+  name: {{ grafana_resource_name }}-{{ item.name }}
 spec:
   instanceSelector:
     matchLabels:
       {{ grafana_label_selector }}
   route:
-    receiver: {{ grafana_combined_notification_policy.contact_point }}
+    receiver: {{ item.contact_point }}
     group_by:
-      {{ grafana_combined_notification_policy.group_by }}
+      {{ item.group_by }}
     routes:
-{% for item in grafana_combined_notification_policy.routes %}
+{% for item_inner in item.routes %}
   - receiver: {{ item.contact_point }}
     object_matchers:
-    - - {{ item.matcher.label }}
-      - {{ item.matcher.match }}
-      - {{ item.matcher.value }}
-{% if item.group_wait is defined %}
-group_wait: {{ item.group_wait }}
+    - - {{ item_inner.matcher.label }}
+      - {{ item_inner.matcher.match }}
+      - {{ item_inner.matcher.value }}
+{% if item_inner.group_wait is defined %}
+group_wait: {{ item_inner.group_wait }}
 {% endif %}
-{% if item.group_interval is defined %}
-group_interval: {{ item.group_interval }}
+{% if item_inner.group_interval is defined %}
+group_interval: {{ item_inner.group_interval }}
 {% endif %}
-{% if item.repeat_interval is defined %}
-repeat_interval: {{ item.repeat_interval }}
+{% if item_inner.repeat_interval is defined %}
+repeat_interval: {{ item_inner.repeat_interval }}
 {% endif %}
 {% endfor %}
