--- a/roles/grafana/templates/grafana-folder.yml.j2
+++ b/roles/grafana/templates/grafana-folder.yml.j2
@@ -8,5 +8,7 @@ spec:
     matchLabels:
       {{ grafana_label_selector }}
   title: {{ item.titel }}
+{% if item.permissions is defined %}
   permissions: |
     {{ item.permissions | indent(width=4, first=False) }}
+{% endif %}
