--- a/roles/grafana/templates/grafana-folder.yml.j2
+++ b/roles/grafana/templates/grafana-folder.yml.j2
@@ -2,13 +2,12 @@
 apiVersion: grafana.integreatly.org/v1beta1
 kind: GrafanaFolder
 metadata:
-  name: {{ grafana_resource_name }}-{{ item.name }}
+  name: {{ item.name }}
 spec:
   instanceSelector:
     matchLabels:
-      {{ grafana_label_selector }}
-  title: {{ item.titel }}
+{{ grafana_label_selector | to_nice_yaml(indent=6) | indent(6, true) }}
+  title: {{ item.title }}
 {% if item.permissions is defined %}
   permissions: |
-    {{ item.permissions | indent(width=4, first=False) }}
-{% endif %}
+    {{ item.permissions | to_json }}
