add existing secret option to postgres config role

--- a/roles/postgres_config/templates/secret.yml.j2
+++ b/roles/postgres_config/templates/secret.yml.j2
@@ -5,9 +5,13 @@ metadata:
     namespace: "{{ psql_namespace }}"
 type: Opaque
 data:
-    PGHOST: "{{ psql_host | b64encode }}"
-    PGUSER: "{{ psql_user | b64encode }}"
+{% if not psql_pass_key is defined %}
     PGPASSWORD: "{{ psql_pass | b64encode }}"
+{% endif %}
+{% if not psql_user_key is defined  %}
+    PGUSER: "{{ psql_user | b64encode }}"
+{% endif %}
+    PGHOST: "{{ psql_host | b64encode }}"
     DB_NAME: "{{ psql_db_name | b64encode }}"
     DB_CUSTOM_COMMAND: "{{ psql_db_custom_command | b64encode }}"
 {% for user in psql_db_users %}
