--- a/roles/grafana/templates/grafana-folder.yml.j2
+++ b/roles/grafana/templates/grafana-folder.yml.j2
@@ -2,7 +2,7 @@
 apiVersion: grafana.integreatly.org/v1beta1
 kind: GrafanaFolder
 metadata:
-  name: {{ item.name }}
+  name: {{ grafana_resource_name }}-{{ item.name }}
 spec:
   instanceSelector:
     matchLabels:
@@ -11,3 +11,4 @@ spec:
 {% if item.permissions is defined %}
   permissions: |
     {{ item.permissions | to_json }}
+{% endif %}
