--- a/roles/grafana/templates/grafana-folder.yml.j2
+++ b/roles/grafana/templates/grafana-folder.yml.j2
@@ -1,3 +1,4 @@
+{% if not (item.name == 'developer' and stage != 'dev') %}
 ---
 apiVersion: grafana.integreatly.org/v1beta1
 kind: GrafanaFolder
@@ -11,4 +12,5 @@ spec:
 {% if item.permissions is defined %}
   permissions: |
     {{ item.permissions | to_json }}
+{% endif %}
 {% endif %}
