changes after review

--- a/roles/postgres_config/templates/secret.yml.j2
+++ b/roles/postgres_config/templates/secret.yml.j2
@@ -5,10 +5,10 @@ metadata:
     namespace: "{{ psql_namespace }}"
 type: Opaque
 data:
-{% if not psql_pass_key is defined %}
+{% if psql_pass_key is not defined %}
     PGPASSWORD: "{{ psql_pass | b64encode }}"
 {% endif %}
-{% if not psql_user_key is defined  %}
+{% if psql_user_key is not defined  %}
     PGUSER: "{{ psql_user | b64encode }}"
 {% endif %}
     PGHOST: "{{ psql_host | b64encode }}"
