--- a/roles/kubernetes_prometheus/templates/grafana-dashboard.yml.j2
+++ b/roles/kubernetes_prometheus/templates/grafana-dashboard.yml.j2
@@ -1,12 +1,10 @@
 ---
-apiVersion: grafana.integreatly.org/v1beta1
-kind: GrafanaDashboard
+apiVersion: v1
+kind:  ConfigMap
 metadata:
   name: {{ grafana_resource_name }}-{{ item.name }}
-spec:
-  instanceSelector:
-    matchLabels:
-      {{ grafana_label_selector }}
-  folder: {{ item.folder }}
-  json: >
+  namespace: {{ item.namespace | default('monitoring') }}
+  labels:
+    grafana_dashboard: "1"
+data: >
     {{ item.json | indent(width=4, first=False) }}
