--- a/roles/kubernetes_prometheus/templates/grafana-dashboard.yml.j2
+++ b/roles/kubernetes_prometheus/templates/grafana-dashboard.yml.j2
@@ -7,5 +7,5 @@ metadata:
   labels:
     grafana_dashboard: "1"
 data:
-  my-dashboard.json: |
+  {{ item.filename }}: |
     {{ item.json | indent(width=4, first=False) }}
