--- a/roles/kubernetes_prometheus/templates/grafana-dashboard.yml.j2
+++ b/roles/kubernetes_prometheus/templates/grafana-dashboard.yml.j2
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind:  ConfigMap
 metadata:
-  name: {{ grafana_resource_name }}-{{ item.name }}
+  name: {{ kubernetes_prometheus_dashboard_prefix }}-{{ item.name }}
   namespace: {{ item.namespace | default('monitoring') }}
   labels:
     grafana_dashboard: "1"
