--- a/roles/postgres_config/templates/config-script.sh.j2
+++ b/roles/postgres_config/templates/config-script.sh.j2
@@ -12,6 +12,9 @@ echo "REVOKE ALL ON DATABASE $DB_NAME FROM PUBLIC;" | psql -d postgres -w
 echo "Create and set privileges for user {{ user.name }}"
 echo "SELECT 'CREATE USER {{ user.name }}' WHERE NOT EXISTS (SELECT FROM pg_user WHERE usename = '{{ user.name }}')\gexec" | psql -d postgres -w
 echo "ALTER USER {{ user.name }} WITH ENCRYPTED PASSWORD '$DB_{{ user.name | upper }}_USER_PASS'" | psql -d postgres -w
+{% if user.allow_db_creation | default(false) %}
+echo "ALTER USER {{ user.name }} CREATEDB" | psql -d postgres -w
+{% endif %}
 echo "GRANT {{ user.privileges | default(psql_default_privileges) }} ON DATABASE $DB_NAME to {{ user.name }}" | psql -d postgres -w
 {% endfor %}
 echo "Executing optional custom command in the new DB"
