--- a/roles/privacyidea_mariadb/templates/PrivacyIdea-duplyconf.j2
+++ b/roles/privacyidea_mariadb/templates/PrivacyIdea-duplyconf.j2
@@ -3,8 +3,8 @@ GPG_KEY_SIGN='disabled'
 GPG_OPTS='--pinentry-mode loopback --trust-model always'
 GPG='/usr/bin/gpg'
 TARGET="boto3+s3://{{ backup_s3_bucket }}/{{ 'privacyidea-test' if privacyidea_variant == 'test' else 'privacyidea' }}/"
-export AWS_ACCESS_KEY_ID="{{ lookup('dbildungscloud.onepwd.onepwd', secret_name= backup_secret_name, field='AWS_ACCESS_KEY_ID', vault=vault) }}"
-export AWS_SECRET_ACCESS_KEY="{{ lookup('dbildungscloud.onepwd.onepwd', secret_name=  backup_secret_name, field='AWS_SECRET_ACCESS_KEY', vault=vault) }}"
+export AWS_ACCESS_KEY_ID="{{ lookup('dbildungscloud.onepwd.onepwd', secret_name= backup_secret_name, field='AWS_ACCESS_KEY_ID', vault=vault , session_shorthand='ansible-run', credentials=op_credentials ) }}"
+export AWS_SECRET_ACCESS_KEY="{{ lookup('dbildungscloud.onepwd.onepwd', secret_name=  backup_secret_name, field='AWS_SECRET_ACCESS_KEY', vault=vault , session_shorthand='ansible-run', credentials=op_credentials) }}"
 # base directory to backup
 SOURCE='/'
 MAX_AGE=6M
