--- a/roles/grafana/templates/grafana-dashboard.yml.j2
+++ b/roles/grafana/templates/grafana-dashboard.yml.j2
@@ -8,5 +8,5 @@ spec:
     matchLabels:
       {{ grafana_label_selector }}
   folder: {{ item.folder }}
-  json: >
-    {{ item.json | indent(width=4, first=False) }}
+  json: |
+{{ item.json | indent(4, true) }}
